<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/book_detail_root">
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorPrimaryDark"/>
        <android.support.v7.widget.Toolbar
            android:id="@+id/book_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include layout="@layout/book_item" />
                <LinearLayout
                    android:id="@+id/book_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/book_item"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/book_detail_title"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        style="@style/book_detail"/>
                    <TextView
                        android:id="@+id/book_detail_language"
                        android:text="@string/language"
                        style="@style/book_detail"/>
                    <TextView
                        android:id="@+id/book_detail_edition"
                        android:text="@string/edition"
                        style="@style/book_detail"/>
                    <TextView
                        android:id="@+id/book_detail_page_count"
                        android:text="@string/page"
                        style="@style/book_detail"/>
                    <TextView
                        android:id="@+id/book_detail_theme"
                        android:text="@string/theme"
                        style="@style/book_detail"/>
                    <TextView
                        android:id="@+id/book_detail_summary"
                        android:text="@string/summary"
                        style="@style/book_detail"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/book_detail_gcxx_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/book_detail_layout"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/book_detail_gcxx"
                        style="@style/book_detail"
                        android:text="@string/gcxx"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@+id/book_detail_gcxx"
                        android:id="@+id/linearLayout">
                        <TextView
                            android:text="@string/call_no"
                            android:layout_marginTop="10dp"
                            style="@style/tableHead"/>
                        <TextView
                            android:text="@string/bar_code"
                            style="@style/tableHead"/>
                        <TextView
                            android:text="@string/book_state"
                            style="@style/tableHead"/>
                        <TextView
                            android:text="@string/return_date"
                            style="@style/tableHead"/>
                        <TextView
                            android:text="@string/belong_to"
                            style="@style/tableHead"/>
                        <TextView
                            android:text="@string/book_position"
                            style="@style/tableHead"
                            android:layout_marginBottom="30dp"/>

                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/book_detail_recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:layout_below="@+id/book_detail_gcxx"
                        android:layout_marginTop="10dp"
                        android:scrollbars="horizontal"
                        android:scrollbarStyle="insideOverlay"
                        android:layout_toEndOf="@+id/linearLayout" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

</LinearLayout>