<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:paddingStart="-5dp">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <ImageView
           android:id="@+id/login_dialog_logo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:adjustViewBounds="true"
           android:src="@drawable/login_logo"/>
       <android.support.design.widget.TextInputLayout
           android:id="@+id/login_dialog_account_layout"
           android:layout_below="@id/login_dialog_logo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp">
           <EditText
               android:id="@+id/login_dialog_account"
               android:layout_width="match_parent"
               android:inputType="number"
               android:singleLine="true"
               android:layout_height="wrap_content"
               android:hint="@string/account"/>
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:id="@+id/login_dialog_password_layout"
           android:layout_width="match_parent"
           android:layout_below="@+id/login_dialog_account_layout"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginStart="5dp">
           <EditText
               android:id="@+id/login_dialog_password"
               android:layout_width="match_parent"
               android:inputType="textPassword"
               android:background="@null"
               android:layout_height="wrap_content"
               android:hint="@string/password"/>
       </android.support.design.widget.TextInputLayout>
       <LinearLayout
           android:id="@+id/login_dialog_button_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/login_dialog_password_layout">
           <Button
               android:id="@+id/login_dialog_cancel"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:background="@drawable/button_border"
               android:text="@string/cancel"
               android:gravity="center"/>
           <Button
               android:id="@+id/login_dialog_login"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:background="@drawable/button_border"
               android:text="@string/login"
               android:gravity="center"/>
       </LinearLayout>
       <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
           android:id="@+id/login_dialog_progress_bar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/login_dialog_button_layout"
           android:indeterminate="true"
           app:spb_sections_count="2"
           app:spb_colors="@array/colors"
           app:spb_speed="4.0"
           app:spb_stroke_width="10dp"
           app:spb_interpolator="spb_interpolator_accelerate"
           app:spb_stroke_separator_length="0dp"
           app:spb_reversed="false"
           app:spb_mirror_mode="false"
           app:spb_progressiveStart_activated="true"
           android:visibility="gone"/>
   </RelativeLayout>

</android.support.v7.widget.CardView>